assets/css/style.css
/*----------------------Colors */
.hero-text-container,
.tl-item,
.history-content-top-row,
.history-content {
    background-color: rgba(148, 97, 142, 0.8);
}


#footer-container {
    background-color: rgba(148, 97, 142, 1);
}

body,
#logo,
.modal-content,
.image-gallery-container {
    background-color: rgba(232, 232, 232, 0.9);
}


/*-------------------Special paddings/margins/text */

h2,
h3,
h4,
h5 {
    font-family: Ubuntu, sans-serif;
    font-weight: 700;
    margin-bottom: 20px;
    color: #49274A;
}

h2,
h3 {
    font-size: 35px;
    letter-spacing: 2px;
}


h1,
h2,
h3,
h4,
h5 {
    margin: 0;
}

.uppercase {
    text-transform: uppercase;
}


/*----------------------Header */

#logo {
    font-family: Monoton;
    text-align: center;
    margin-top: 8px;
    color: #49274A;
    font-size: 5.5vw;
}

/*how to push header/nav down> */
.header-container {
    margin-top: 10px;
    margin-bottom: 15px;
    max-height: 90px;
    width: 98%;
}

/*tutor support to help with nav alignment*/
#navbarText {
    justify-content: flex-end;
}

/*tutor support to help with nav alignment*/
#nav-list {
    margin: 0 !important;
    margin-left: auto;
}

a {
    overflow: hidden;
    Margin-top: 5px;
    font-family: "Ubuntu", sans-serif;
    font-weight: 700;
    color: #49274A;
    text-decoration: none;
    font-size: 20px;
    letter-spacing: 2px;
    padding: 5px 5px 10px 5px;
}

/* Change the color of links on hover */
nav a:hover {
    color: #ececef;
}

/*Change the color of the link for current page */
#nav-home a,
#nav-gallery a,
#nav-history a {
    color: #ececef;
}

#alert-container {
    margin-top: 3vh;
}

#ticket-alert {
    margin: 5px;
    text-align: center;
    font-size: 16px;
    letter-spacing: 2px;
    max-height: 30px;
    font-family: "Ubuntu", sans-serif;
    font-weight: 700;
    padding: 6px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#buy-link {
    font-size: 16px;
    margin: 0;
    padding: 5px;
    color: red;
}


/*-------------------Homepage */

.hero-image-container {
    padding: 0;
    width: 100%;
}

.hero-image {
    position: relative;
    opacity: 0.7;
    margin: 0;
    padding: 0;
    margin-bottom: 7vh;
}

.hero-text-container {
    height: fit-content;
    text-align: center;
    display: flex;
    align-self: flex-end;
    width: fit-content;
    font-size: 20px;
    border-radius: 10px;
    padding: 20px 15px;
    margin-top: 50vh;
}

.star {
    font-size: 25px;
    color: #49274A;
}

/*-------------------History Page */

.history-grid-container {
    margin-top: 5vh;
    width: 90%;
    margin-bottom: 10vh;
}

#history-image1 {
    background: url("../images/band-practice-cropped.webp") no-repeat bottom center;
    background-size: cover;
}

#history-image2 {
    background: url("../images/history2cropped.webp") no-repeat bottom center;
    background-size: cover;
    padding: 0;
}

#history-video {
    min-height: 350px;
    width: 100%;
    border-radius: 10px;
}

#festival-image {
    background: url("../images/festival-stage.webp") no-repeat center center;
    background-size: cover;
    padding: 0;
}

.history-content-top-row,
.history-content {
    margin-top: 8px;
    margin-bottom: 10px;
    min-height: 340px;
    box-sizing: border-box;
    border: 1px solid #151C32;
    border-radius: 10px;
}

.history-text h4 {
    text-align: left;
    font-size: 20px;
    padding: 20px 25px;
}

.history-text p {
    color: #151C32;
    font-size: 20px;
    font-family: "Cabin Condensed", sans-serif;
    padding: 20px 30px;
}

/*-------------------Gallery Page */



/*-------------------Responsive Gallery Styling */

/* Code below from tutorial: (https: //blog.logrocket.com/responsive-image-gallery-css-flexbox/)
    Code source: https: //codesandbox.io/s/delicate-wave-sts6l7?file=/style.css:395-1242) */

ul {
    list-style: none;
}

.gallery-heading {
    margin-top: 20px;
    margin-bottom: 10px;
    font-family: Ubuntu, sans-serif;
    font-size: 35px;
    letter-spacing: 2px;
    color: #151C32;
}

/* Responsive image gallery rules begin*/

.image-gallery {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    gap: 15px;
}

.image-gallery-container {
    margin-top: 5vh;
    margin-bottom: 10vh;
    min-width: 80%;
}

.image-gallery li {
    flex: 1 1 auto;
    /* or flex: auto; */
    height: 400px;
    cursor: pointer;
    position: relative;
}

.image-gallery::after {
    content: "";
    flex-grow: 999;
}

.image-gallery li img {
    object-fit: cover;
    width: 100%;
    height: 100%;
    vertical-align: middle;
    border-radius: 10px;
    border: 1px solid #151C32;
}

.overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    background: rgba(57, 57, 57, 0.502);
    top: 0;
    left: 0;
    transform: scale(0);
    transition: all 0.2s 0.1s ease-in-out;
    font-family: "Cabin Condensed", sans-serif;
    color: #ececef;
    border-radius: 10px;
    /* center overlay content */
    display: flex;
    align-items: center;
    justify-content: center;
}

/* hover */
.image-gallery li:hover .overlay {
    transform: scale(1);
}


/*-------------------Live */

.timeline-area {
    border-left: 4px solid #49274A;
    left: -30px;
}

.tl-item {
    color: #49274A;
    padding: 10px 10px;
    font-size: 20px;
    border: 3px solid #49274A;
    border-radius: 10px;
    width: 40%;
    position: relative;
    text-align: center;
    margin-bottom: 20px;
}

.tl-item::before {
    content: '';
    display: block;
    width: 15px;
    height: 15px;
    border-radius: 50%;
    background-color: rgba(148, 97, 142, 1);
    border: 2px solid #49274A;
    position: absolute;
    top: 8px;
    left: -28px;
}

.tl-item::after {
    content: '';
    width: 0;
    height: 0;
    border-style: solid;
    border-color: transparent #49274A transparent transparent;
    border-width: 12px;
    position: absolute;
    left: -26px;
    top: 5px;
}
/* ... */

